<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mk"
            android:textSize="@android:dimen/app_icon_size"
            android:textAlignment="center"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:layout_marginBottom="@android:dimen/app_icon_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chart_string"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@android:dimen/app_icon_size"/>
        <Button
            android:id="@+id/quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_string"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@android:dimen/app_icon_size"/>
        <Button
            android:id="@+id/bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_string"
            android:background="@color/colorAccent"
            android:layout_marginBottom="@android:dimen/app_icon_size"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>